# legend-simflow

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  Snakefile  pyproject.toml  simflow-config.yaml
.github/workflows/: main.yml
docs/: Makefile
docs/source/: conf.py  index.md  index.rst  user_manual.md  user_manual.rst
docs/tools/: generate_rule_docs.py
profiles/nersc-batch/: nersc-submit.sh
scripts/: build_pdf.py  make_run_partition_file.py  make_tier_evt_config_file_manual.py  print_simprod_stats.py
scripts/utils/: patterns.py
templates/: default.json
tests/: conftest.py  test_aggregate.py  test_commands.py  test_patterns.py  test_workflow.py
tests/dummyprod/: simflow-config.yaml
tests/dummyprod/inputs/simprod/config/geom/: l200p03-geom-config.yaml
tests/dummyprod/inputs/simprod/config/pars/opv/: l200-p14-r000-T%-all-opvs.yaml  validity.yaml
tests/dummyprod/inputs/simprod/config/pars/ssd/: adl-2016-temp-model.yaml
tests/dummyprod/inputs/simprod/config/tier/stp/l200p03/: confinement.yaml  generators.yaml  simconfig.yaml  template-cal.mac  template.mac
tests/dummyprod/inputs/simprod/config/tier/ver/l200p03/: simconfig.yaml
tests/test-prod/: simflow-config.yaml
workflow/: Snakefile
workflow/envs/: global.yaml  julia.yaml  remage.yaml
workflow/profiles/default/: config.yaml
workflow/profiles/nersc-batch/: config.yaml  nersc-submit.sh
workflow/profiles/nersc-interactive/: config.yaml
workflow/rules/: aux.smk  common.smk  evt.smk  hit.smk  pdf.smk  stp.smk  ver.smk
workflow/scripts/: build_pdf.py  make_tier_evt_config_file_manual.py  off_to_ac.py  print_benchmark_stats.py
workflow/scripts/outschema/: slim_down.C
workflow/scripts/utils/: aggregate.py  execenv.py  patterns.py
workflow/src/legendsimflow/: __init__.py  aggregate.py  commands.py  exceptions.py  mappings.py  patterns.py  tier_evt.py  utils.py
workflow/src/legendsimflow/scripts/: Project.toml  build_pdf.py  crawl_legend_slow_control.py  generate_macros.py  julia-env-setup.jl  make_hpge_drift_time_maps.jl  make_run_partition_file.py  make_tier_evt_config_file.py  make_tier_evt_config_file_manual.py  off_to_ac.py  print_benchmark_stats.py  print_simprod_stats.py
workflow/src/legendsimflow/scripts/tier/: hit.py
